Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19353

QGraphicsView::setMouseTracking(true) breaks QGraphicsItem::ItemIsMovable if mouse is moved outside the view

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.3
    • 4.6.3, 4.7.1, 4.7.3
    • Widgets: GraphicsView
    • OSX 10.6.7, Xcode 3.2.6, g++ 4.2.1, using source distribution of Qt

    • 4bc2550e657ef1029919a15448f6f045354eeb96

      When setMouseTracking is enabled on a QGraphicsView, the item positioning is offseted if the item is dragged outside the view.

      To reproduce :
      1 compile attached main.cpp : qmake -project && qmake && make
      2 launch mousegrab
      3 left click to select the circle
      4 drag it outside the view (far on the right for example)
      5 bring it back inside the view (release the mouse left button)
      6 re-click on the circle
      7 drag the item
      8 at the first movement, it gets offseted/positioned at its "old" position (the one it was at step 3)

        1. main.cpp
          0.8 kB
        2. qt-itemjump.patch
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            r2d3 David Geldreich
            Votes:
            4 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes