Ensure the mouse buttons are preserved when entering a widget

On Mac we have to fake the QEvent::Enter event when entering a widget
so we need to ensure the buttons held down are set as part of that event
otherwise it causes problems with graphicsview which will update the
grabbed item based on this event.

Task-number: QTBUG-19353
Change-Id: I89252a46b5edd0d82b6b1a0cf2592f72b472e5cc
Reviewed-by: Nils Jeisecke <jeisecke@saltation.de>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@nokia.com>